--- a/myfirstcompetition.html
+++ b/myfirstcompetition.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restigouche Dojo - BJJ Competition Guide</title>
+    <title>Your First BJJ Competition: A Guide for Restigouche Dojo Athletes</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle2.css" rel="stylesheet">
@@ -42,9 +42,17 @@
         </nav>
     </div>
 
+    <!--LANGUAGE SELECTION-->
+    <div class="language-selection">
+        <select id="language-selection">
+            <option value="en">English</option>
+            <option value="fr">Français</option>
+        </select>
+    </div>
+
     <!--BANNER-->
     <div class="banner-area">
-        <h2>Your First BJJ Competition: A Guide for Restigouche Dojo Athletes</h2>
+        <h2></h2>
     </div>
     
     <!--CONTENT-->
@@ -52,129 +60,77 @@
         <div class="wrapper-body">
             <section class="hero">
                 <div class="container">
-                    <h2 id="title">Welcome, Restigouche Dojo Warriors!</h2>
+                    <h2 id="title">
+                        Your First BJJ Competition: A Guide for Restigouche Dojo Athletes
+                    </h2>
                     <p id="program-description">
                         Congratulations on taking the step to compete in your first Brazilian Jiu-Jitsu (BJJ) tournament. Competing is a fantastic way to test your skills, gain experience, and grow as a martial artist. This guide will help you prepare both physically and mentally for the challenge ahead.
                     </p>
+                    <a href="https://square.link/u/Cn5ZtgDm" class="cta-button" id="enroll-message">Register now</a>
                 </div>
             </section>
             <section class="features">
                 <div class="container">
                     <h2 id="why-restigouche-dojo">Preparing for Your First BJJ Competition</h2>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/color/256/puzzle.png">
                         <h3 id="reason-one">1. Set Clear Goals</h3>
-                        <p id="reason-one-text">
-                            Understand why you’re competing. Is it to test your skills, gain experience, or simply push your boundaries? Having a clear purpose will help you stay focused and motivated.
-                        </p>
+                        <p id="reason-one-text">Understand why you’re competing. Is it to test your skills, gain experience, or simply push your boundaries? Having a clear purpose will help you stay focused and motivated.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/ios/256/communication-skills.png">
                         <h3 id="reason-two">2. Develop a Game Plan</h3>
-                        <p id="reason-two-text">
-                            A game plan is essential for success. This isn’t just a vague idea but a detailed strategy for every possible scenario:
-                            <ul>
-                                <li><strong>Starting Position:</strong> Decide whether you’ll aim for a takedown or pull guard.</li>
-                                <li><strong>Top Positions:</strong> Know your go-to moves for passing guard and maintaining control.</li>
-                                <li><strong>Bottom Positions:</strong> Have specific sweeps and escapes drilled into muscle memory.</li>
-                                <li><strong>Submissions:</strong> Focus on a few high-percentage submissions that you can execute well.</li>
-                                <li><strong>Defense:</strong> Be prepared to defend against common attacks and recover from bad positions.</li>
-                            </ul>
-                        </p>
+                        <p id="reason-two-text">A game plan is essential for success. This isn’t just a vague idea but a detailed strategy for every possible scenario.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Fun Icon">
                         <h3 id="reason-three">3. Train Smart</h3>
-                        <p id="reason-three-text">
-                            Consistency is key. Regular training sessions will improve your techniques, stamina, and overall fitness:
-                            <ul>
-                                <li><strong>Spar with Different Partners:</strong> This will expose you to various styles and body types.</li>
-                                <li><strong>Drill, Drill, Drill:</strong> Repetition builds proficiency. Focus on the techniques in your game plan.</li>
-                                <li><strong>Conditioning:</strong> Incorporate cardio, strength training, and flexibility exercises. Jump rope, running, and bodyweight exercises are excellent choices.</li>
-                            </ul>
-                        </p>
+                        <p id="reason-three-text">Consistency is key. Regular training sessions will improve your techniques, stamina, and overall fitness.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Mental Preparation Icon">
                         <h3 id="reason-four">4. Mental Preparation</h3>
-                        <p id="reason-four-text">
-                            Your mindset is just as important as your physical preparation:
-                            <ul>
-                                <li><strong>Relax and Breathe:</strong> Learn to control your breathing. Practice deep diaphragm breathing: inhale through your nose for four seconds, fill your lungs, and exhale through your mouth for eight seconds.</li>
-                                <li><strong>Visualization:</strong> Picture your matches in your mind. See yourself executing your game plan, staying calm, and handling any challenges. Always visualize positive outcomes.</li>
-                                <li><strong>Stay Positive:</strong> Replace negative thoughts with positive affirmations. Believe in your training and your ability to perform well.</li>
-                            </ul>
-                        </p>
+                        <p id="reason-four-text">Your mindset is just as important as your physical preparation.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Rules Icon">
                         <h3 id="reason-five">5. Understand the Rules</h3>
-                        <p id="reason-five-text">
-                            Familiarize yourself with the tournament’s rules and point system:
-                            <ul>
-                                <li><strong>Takedown or Throw:</strong> 2 points</li>
-                                <li><strong>Sweep:</strong> 2 points</li>
-                                <li><strong>Knee on Belly:</strong> 2 points</li>
-                                <li><strong>Passing the Guard:</strong> 3 points</li>
-                                <li><strong>Mount Position:</strong> 4 points</li>
-                            </ul>
-                            Understanding the rules will boost your confidence and help you strategize effectively.
-                        </p>
+                        <p id="reason-five-text">Familiarize yourself with the tournament’s rules and point system.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Gear Icon">
                         <h3 id="reason-six">6. Gear Up</h3>
-                        <p id="reason-six-text">
-                            Ensure you have the correct gear:
-                            <ul>
-                                <li><strong>Gi:</strong> Make sure your gi is IBJJF-legal or meets the specific tournament’s requirements. It should be clean and in good condition.</li>
-                                <li><strong>Belt:</strong> Wear a belt that corresponds to your rank.</li>
-                                <li><strong>Mouthguard:</strong> Protect your teeth.</li>
-                                <li><strong>Extras:</strong> Bring a spare gi, water, snacks, and any other personal items you may need.</li>
-                            </ul>
-                        </p>
+                        <p id="reason-six-text">Ensure you have the correct gear.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Warm-Up Icon">
                         <h3 id="reason-seven">7. Warm-Up Properly</h3>
-                        <p id="reason-seven-text">
-                            A good warm-up helps calm your mind and prepare your body:
-                            <ul>
-                                <li><strong>Routine:</strong> Perform a familiar warm-up routine that you do before training sessions.</li>
-                                <li><strong>Focus:</strong> Concentrate on your movements and breathing, not the upcoming matches.</li>
-                            </ul>
-                        </p>
+                        <p id="reason-seven-text">A good warm-up helps calm your mind and prepare your body.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Nutrition Icon">
                         <h3 id="reason-eight">8. Nutrition and Hydration</h3>
-                        <p id="reason-eight-text">
-                            Your performance depends on how well you fuel your body:
-                            <ul>
-                                <li><strong>Hydrate:</strong> Drink plenty of water leading up to the competition.</li>
-                                <li><strong>Eat Smart:</strong> Consume a balanced diet rich in proteins, carbohydrates, and healthy fats. On the day of the competition, eat light, easily digestible foods.</li>
-                            </ul>
-                        </p>
+                        <p id="reason-eight-text">Your performance depends on how well you fuel your body.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Competition Day Icon">
                         <h3 id="reason-nine">9. On Competition Day</h3>
-                        <p id="reason-nine-text">
-                            - <strong>Arrive Early:</strong> Give yourself plenty of time to check in, warm up, and get mentally prepared.<br>
-                            - <strong>Stay Calm:</strong> Use your breathing techniques and visualization to stay relaxed.<br>
-                            - <strong>Trust Your Training:</strong> Believe in your preparation and follow your game plan.
-                        </p>
+                        <p id="reason-nine-text">Arrive early, stay calm, and trust your training.</p>
                     </div>
                     <div class="feature-item">
+                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Reflection Icon">
                         <h3 id="reason-ten">10. Post-Competition Reflection</h3>
-                        <p id="reason-ten-text">
-                            No matter the outcome, every competition is a learning experience:
-                            <ul>
-                                <li><strong>Feedback:</strong> Seek feedback from your coach and teammates. Identify areas for improvement.</li>
-                                <li><strong>Reflect:</strong> Think about what went well and what didn’t. Use this to guide your future training.</li>
-                            </ul>
-                        </p>
+                        <p id="reason-ten-text">No matter the outcome, every competition is a learning experience.</p>
                     </div>
                 </div>
             </section>
-            <div class="icons8-credit">
-                <a target="_blank" href="https://icons8.com/">Icons by Icons8</a>
-            </div>
+
+            <div class="icons8-credit"><a target="_blank" href="https://icons8.com/">Icons by Icons8</a></div>
         </div>
     </div>
-    
+
     <script src="/JS/script4.js"></script>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
