--- a/myfirstcompetition.html
+++ b/myfirstcompetition.html
@@ -1,3 +1,6 @@
+Here’s the revised HTML with the changes you requested:
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your First BJJ Competition: A Guide for Restigouche Dojo Athletes</title>
-    <!--CSS style sheet-->
+    <!-- CSS style sheet -->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle2.css" rel="stylesheet">
-    <!--Google Fonts-->
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!--NAV BAR AND LOGO-->
+    <!-- NAV BAR AND LOGO -->
     <div class="wrapper">
         <nav class="navbar">
             <div class="navbar-container container">
@@ -32,7 +35,10 @@
                     <div id="google_translate_element"></div>
                     <script type="text/javascript">
                         function googleTranslateElementInit() {
-                            new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+                            new google.translate.TranslateElement({
+                                pageLanguage: 'en',
+                                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+                            }, 'google_translate_element');
                         }
                     </script>
                     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
@@ -42,7 +48,7 @@
         </nav>
     </div>
 
-    <!--LANGUAGE SELECTION-->
+    <!-- LANGUAGE SELECTION -->
     <div class="language-selection">
         <select id="language-selection">
             <option value="en">English</option>
@@ -50,12 +56,7 @@
         </select>
     </div>
 
-    <!--BANNER-->
-    <div class="banner-area">
-        <h2></h2>
-    </div>
-    
-    <!--CONTENT-->
+    <!-- CONTENT -->
     <div class="content-area">
         <div class="wrapper-body">
             <section class="hero">
@@ -64,74 +65,101 @@
                         Your First BJJ Competition: A Guide for Restigouche Dojo Athletes
                     </h2>
                     <p id="program-description">
-                        Congratulations on taking the step to compete in your first Brazilian Jiu-Jitsu (BJJ) tournament. Competing is a fantastic way to test your skills, gain experience, and grow as a martial artist. This guide will help you prepare both physically and mentally for the challenge ahead.
+                        Welcome, Restigouche Dojo Warriors! Congratulations on taking the step to compete in your first Brazilian Jiu-Jitsu (BJJ) tournament. Competing is a fantastic way to test your skills, gain experience, and grow as a martial artist. This guide will help you prepare both physically and mentally for the challenge ahead.
                     </p>
-                    <a href="https://square.link/u/Cn5ZtgDm" class="cta-button" id="enroll-message">Register now</a>
                 </div>
             </section>
-            <section class="features">
+            <section class="guide">
                 <div class="container">
-                    <h2 id="why-restigouche-dojo">Preparing for Your First BJJ Competition</h2>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/color/256/puzzle.png">
-                        <h3 id="reason-one">1. Set Clear Goals</h3>
-                        <p id="reason-one-text">Understand why you’re competing. Is it to test your skills, gain experience, or simply push your boundaries? Having a clear purpose will help you stay focused and motivated.</p>
+                    <h2 id="why-restigouche-dojo">Guide to Preparing for Your First BJJ Competition</h2>
+                    <div class="guide-item">
+                        <h3>1. Set Clear Goals</h3>
+                        <p>Understand why you’re competing. Is it to test your skills, gain experience, or simply push your boundaries? Having a clear purpose will help you stay focused and motivated.</p>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/ios/256/communication-skills.png">
-                        <h3 id="reason-two">2. Develop a Game Plan</h3>
-                        <p id="reason-two-text">A game plan is essential for success. This isn’t just a vague idea but a detailed strategy for every possible scenario.</p>
+                    <div class="guide-item">
+                        <h3>2. Develop a Game Plan</h3>
+                        <p>A game plan is essential for success. This isn’t just a vague idea but a detailed strategy for every possible scenario.</p>
+                        <ul>
+                            <li><strong>Starting Position:</strong> Decide whether you’ll aim for a takedown or pull guard.</li>
+                            <li><strong>Top Positions:</strong> Know your go-to moves for passing guard and maintaining control.</li>
+                            <li><strong>Bottom Positions:</strong> Have specific sweeps and escapes drilled into muscle memory.</li>
+                            <li><strong>Submissions:</strong> Focus on a few high-percentage submissions that you can execute well.</li>
+                            <li><strong>Defense:</strong> Be prepared to defend against common attacks and recover from bad positions.</li>
+                        </ul>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Fun Icon">
-                        <h3 id="reason-three">3. Train Smart</h3>
-                        <p id="reason-three-text">Consistency is key. Regular training sessions will improve your techniques, stamina, and overall fitness.</p>
+                    <div class="guide-item">
+                        <h3>3. Train Smart</h3>
+                        <p>Consistency is key. Regular training sessions will improve your techniques, stamina, and overall fitness.</p>
+                        <ul>
+                            <li><strong>Spar with Different Partners:</strong> This will expose you to various styles and body types.</li>
+                            <li><strong>Drill, Drill, Drill:</strong> Repetition builds proficiency. Focus on the techniques in your game plan.</li>
+                            <li><strong>Conditioning:</strong> Incorporate cardio, strength training, and flexibility exercises. Jump rope, running, and bodyweight exercises are excellent choices.</li>
+                        </ul>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Mental Preparation Icon">
-                        <h3 id="reason-four">4. Mental Preparation</h3>
-                        <p id="reason-four-text">Your mindset is just as important as your physical preparation.</p>
+                    <div class="guide-item">
+                        <h3>4. Mental Preparation</h3>
+                        <p>Your mindset is just as important as your physical preparation.</p>
+                        <ul>
+                            <li><strong>Relax and Breathe:</strong> Learn to control your breathing. Practice deep diaphragm breathing: inhale through your nose for four seconds, fill your lungs, and exhale through your mouth for eight seconds.</li>
+                            <li><strong>Visualization:</strong> Picture your matches in your mind. See yourself executing your game plan, staying calm, and handling any challenges. Always visualize positive outcomes.</li>
+                            <li><strong>Stay Positive:</strong> Replace negative thoughts with positive affirmations. Believe in your training and your ability to perform well.</li>
+                        </ul>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Rules Icon">
-                        <h3 id="reason-five">5. Understand the Rules</h3>
-                        <p id="reason-five-text">Familiarize yourself with the tournament’s rules and point system.</p>
+                    <div class="guide-item">
+                        <h3>5. Understand the Rules</h3>
+                        <p>Familiarize yourself with the tournament’s rules and point system. Know what submissions are allowed at your belt level and how points are awarded:</p>
+                        <ul>
+                            <li><strong>Takedown or Throw:</strong> 2 points</li>
+                            <li><strong>Sweep:</strong> 2 points</li>
+                            <li><strong>Knee on Belly:</strong> 2 points</li>
+                            <li><strong>Passing the Guard:</strong> 3 points</li>
+                            <li><strong>Mount Position:</strong> 4 points</li>
+                        </ul>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Gear Icon">
-                        <h3 id="reason-six">6. Gear Up</h3>
-                        <p id="reason-six-text">Ensure you have the correct gear.</p>
+                    <div class="guide-item">
+                        <h3>6. Gear Up</h3>
+                        <p>Ensure you have the correct gear:</p>
+                        <ul>
+                            <li><strong>Gi:</strong> Make sure your gi is IBJJF-legal or meets the specific tournament’s requirements. It should be clean and in good condition.</li>
+                            <li><strong>Belt:</strong> Wear a belt that corresponds to your rank.</li>
+                            <li><strong>Mouthguard:</strong> Protect your teeth.</li>
+                            <li><strong>Extras:</strong> Bring a spare gi, water, snacks, and any other personal items you may need.</li>
+                        </ul>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Warm-Up Icon">
-                        <h3 id="reason-seven">7. Warm-Up Properly</h3>
-                        <p id="reason-seven-text">A good warm-up helps calm your mind and prepare your body.</p>
+                    <div class="guide-item">
+                        <h3>7. Warm-Up Properly</h3>
+                        <p>A good warm-up helps calm your mind and prepare your body.</p>
+                        <ul>
+                            <li><strong>Routine:</strong> Perform a familiar warm-up routine that you do before training sessions.</li>
+                            <li><strong>Focus:</strong> Concentrate on your movements and breathing, not the upcoming matches.</li>
+                        </ul>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Nutrition Icon">
-                        <h3 id="reason-eight">8. Nutrition and Hydration</h3>
-                        <p id="reason-eight-text">Your performance depends on how well you fuel your body.</p>
+                    <div class="guide-item">
+                        <h3>8. Nutrition and Hydration</h3>
+                        <p>Your performance depends on how well you fuel your body.</p>
+                        <ul>
+                            <li><strong>Hydrate:</strong> Drink plenty of water leading up to the competition.</li>
+                            <li><strong>Eat Smart:</strong> Consume a balanced diet rich in proteins, carbohydrates, and healthy fats. On the day of the competition, eat light, easily digestible foods.</li>
+                        </ul>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Competition Day Icon">
-                        <h3 id="reason-nine">9. On Competition Day</h3>
-                        <p id="reason-nine-text">Arrive early, stay calm, and trust your training.</p>
+                    <div class="guide-item">
+                        <h3>9. On Competition Day</h3>
+                        <p>Arrive early, stay calm, and trust your training. Use your breathing techniques and visualization to stay relaxed. Believe in your preparation and follow your game plan.</p>
                     </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Reflection Icon">
-                        <h3 id="reason-ten">10. Post-Competition Reflection</h3>
-                        <p id="reason-ten-text">No matter the outcome, every competition is a learning experience.</p>
+                    <div class="guide-item">
+                        <h3>10. Post-Competition Reflection</h3>
+                        <p>No matter the outcome, every competition is a learning experience. Seek feedback from your coach and teammates, reflect on what went well and what didn’t, and use this to guide your future training.</p>
                     </div>
                 </div>
             </section>
-
-            <div class="icons8-credit"><a target="_blank" href="https://icons8.com/">Icons by Icons8</a></div>
         </div>
     </div>
 
-    <script src="/JS/script4.js"></script>
+    <!-- FOOTER -->
+    <footer>
+        <div class="icons8-credit">
+            <a target="_blank" href="https://icons8.com/">Icons by Icons8</a>
+        </div>
+    </footer>
 
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body>
-</html>
+    <script src="/JS/script4.js"></
