--- a/myfirstcompetition.html
+++ b/myfirstcompetition.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your First BJJ Competition: A Guide for Restigouche Dojo Athletes</title>
-    <!-- CSS style sheet -->
+    <title>Your First BJJ Competition: A Guide</title>
+    <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle2.css" rel="stylesheet">
-    <!-- Google Fonts -->
+    <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- NAV BAR AND LOGO -->
+    <!--NAV BAR AND LOGO-->
     <div class="wrapper">
         <nav class="navbar">
             <div class="navbar-container container">
@@ -32,10 +31,7 @@
                     <div id="google_translate_element"></div>
                     <script type="text/javascript">
                         function googleTranslateElementInit() {
-                            new google.translate.TranslateElement({
-                                pageLanguage: 'en',
-                                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-                            }, 'google_translate_element');
+                            new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
                         }
                     </script>
                     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
@@ -45,37 +41,35 @@
         </nav>
     </div>
 
-    <!-- LANGUAGE SELECTION -->
-    <div class="language-selection">
-        <select id="language-selection">
-            <option value="en">English</option>
-            <option value="fr">Français</option>
-        </select>
+    <!--BANNER-->
+    <div class="banner-area">
+        <img src="path-to-your-image.jpg" alt="BJJ Competition" class="banner-image">
     </div>
-
-    <!-- CONTENT -->
+    
+    <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
+            <select id="language-selection">
+                <option value="en">English</option>
+                <option value="fr">Français</option>
+            </select>
             <section class="hero">
                 <div class="container">
-                    <h2 id="title">
-                        Your First BJJ Competition: A Guide for Restigouche Dojo Athletes
-                    </h2>
+                    <h2 id="title">Your First BJJ Competition: A Guide for Restigouche Dojo Athletes</h2>
                     <p id="program-description">
-                        Welcome, Restigouche Dojo Warriors! Congratulations on taking the step to compete in your first Brazilian Jiu-Jitsu (BJJ) tournament. Competing is a fantastic way to test your skills, gain experience, and grow as a martial artist. This guide will help you prepare both physically and mentally for the challenge ahead.
+                        Congratulations on taking the step to compete in your first Brazilian Jiu-Jitsu (BJJ) tournament. Competing is a fantastic way to test your skills, gain experience, and grow as a martial artist. This guide will help you prepare both physically and mentally for the challenge ahead.
                     </p>
                 </div>
             </section>
             <section class="guide">
                 <div class="container">
-                    <h2 id="why-restigouche-dojo">Guide to Preparing for Your First BJJ Competition</h2>
-                    <div class="guide-item">
-                        <h3>1. Set Clear Goals</h3>
-                        <p>Understand why you’re competing. Is it to test your skills, gain experience, or simply push your boundaries? Having a clear purpose will help you stay focused and motivated.</p>
-                    </div>
-                    <div class="guide-item">
-                        <h3>2. Develop a Game Plan</h3>
-                        <p>A game plan is essential for success. This isn’t just a vague idea but a detailed strategy for every possible scenario.</p>
+                    <h2 id="guide-title">Competition Preparation Guide</h2>
+                    <h3 id="set-goals">1. Set Clear Goals</h3>
+                    <p id="set-goals-text">Understand why you’re competing. Is it to test your skills, gain experience, or simply push your boundaries? Having a clear purpose will help you stay focused and motivated.</p>
+
+                    <h3 id="develop-game-plan">2. Develop a Game Plan</h3>
+                    <p id="develop-game-plan-text">
+                        A game plan is essential for success. This isn’t just a vague idea but a detailed strategy for every possible scenario.
                         <ul>
                             <li><strong>Starting Position:</strong> Decide whether you’ll aim for a takedown or pull guard.</li>
                             <li><strong>Top Positions:</strong> Know your go-to moves for passing guard and maintaining control.</li>
@@ -83,28 +77,31 @@
                             <li><strong>Submissions:</strong> Focus on a few high-percentage submissions that you can execute well.</li>
                             <li><strong>Defense:</strong> Be prepared to defend against common attacks and recover from bad positions.</li>
                         </ul>
-                    </div>
-                    <div class="guide-item">
-                        <h3>3. Train Smart</h3>
-                        <p>Consistency is key. Regular training sessions will improve your techniques, stamina, and overall fitness.</p>
+                    </p>
+
+                    <h3 id="train-smart">3. Train Smart</h3>
+                    <p id="train-smart-text">
+                        Consistency is key. Regular training sessions will improve your techniques, stamina, and overall fitness.
                         <ul>
                             <li><strong>Spar with Different Partners:</strong> This will expose you to various styles and body types.</li>
                             <li><strong>Drill, Drill, Drill:</strong> Repetition builds proficiency. Focus on the techniques in your game plan.</li>
                             <li><strong>Conditioning:</strong> Incorporate cardio, strength training, and flexibility exercises. Jump rope, running, and bodyweight exercises are excellent choices.</li>
                         </ul>
-                    </div>
-                    <div class="guide-item">
-                        <h3>4. Mental Preparation</h3>
-                        <p>Your mindset is just as important as your physical preparation.</p>
+                    </p>
+
+                    <h3 id="mental-preparation">4. Mental Preparation</h3>
+                    <p id="mental-preparation-text">
+                        Your mindset is just as important as your physical preparation.
                         <ul>
                             <li><strong>Relax and Breathe:</strong> Learn to control your breathing. Practice deep diaphragm breathing: inhale through your nose for four seconds, fill your lungs, and exhale through your mouth for eight seconds.</li>
                             <li><strong>Visualization:</strong> Picture your matches in your mind. See yourself executing your game plan, staying calm, and handling any challenges. Always visualize positive outcomes.</li>
                             <li><strong>Stay Positive:</strong> Replace negative thoughts with positive affirmations. Believe in your training and your ability to perform well.</li>
                         </ul>
-                    </div>
-                    <div class="guide-item">
-                        <h3>5. Understand the Rules</h3>
-                        <p>Familiarize yourself with the tournament’s rules and point system. Know what submissions are allowed at your belt level and how points are awarded:</p>
+                    </p>
+
+                    <h3 id="understand-rules">5. Understand the Rules</h3>
+                    <p id="understand-rules-text">
+                        Familiarize yourself with the tournament’s rules and point system. Know what submissions are allowed at your belt level and how points are awarded:
                         <ul>
                             <li><strong>Takedown or Throw:</strong> 2 points</li>
                             <li><strong>Sweep:</strong> 2 points</li>
@@ -112,51 +109,63 @@
                             <li><strong>Passing the Guard:</strong> 3 points</li>
                             <li><strong>Mount Position:</strong> 4 points</li>
                         </ul>
-                    </div>
-                    <div class="guide-item">
-                        <h3>6. Gear Up</h3>
-                        <p>Ensure you have the correct gear:</p>
+                    </p>
+
+                    <h3 id="gear-up">6. Gear Up</h3>
+                    <p id="gear-up-text">
+                        Ensure you have the correct gear:
                         <ul>
                             <li><strong>Gi:</strong> Make sure your gi is IBJJF-legal or meets the specific tournament’s requirements. It should be clean and in good condition.</li>
                             <li><strong>Belt:</strong> Wear a belt that corresponds to your rank.</li>
                             <li><strong>Mouthguard:</strong> Protect your teeth.</li>
                             <li><strong>Extras:</strong> Bring a spare gi, water, snacks, and any other personal items you may need.</li>
                         </ul>
-                    </div>
-                    <div class="guide-item">
-                        <h3>7. Warm-Up Properly</h3>
-                        <p>A good warm-up helps calm your mind and prepare your body.</p>
+                    </p>
+
+                    <h3 id="warm-up">7. Warm-Up Properly</h3>
+                    <p id="warm-up-text">
+                        A good warm-up helps calm your mind and prepare your body.
                         <ul>
                             <li><strong>Routine:</strong> Perform a familiar warm-up routine that you do before training sessions.</li>
                             <li><strong>Focus:</strong> Concentrate on your movements and breathing, not the upcoming matches.</li>
                         </ul>
-                    </div>
-                    <div class="guide-item">
-                        <h3>8. Nutrition and Hydration</h3>
-                        <p>Your performance depends on how well you fuel your body.</p>
+                    </p>
+
+                    <h3 id="nutrition-hydration">8. Nutrition and Hydration</h3>
+                    <p id="nutrition-hydration-text">
+                        Your performance depends on how well you fuel your body.
                         <ul>
                             <li><strong>Hydrate:</strong> Drink plenty of water leading up to the competition.</li>
                             <li><strong>Eat Smart:</strong> Consume a balanced diet rich in proteins, carbohydrates, and healthy fats. On the day of the competition, eat light, easily digestible foods.</li>
                         </ul>
-                    </div>
-                    <div class="guide-item">
-                        <h3>9. On Competition Day</h3>
-                        <p>Arrive early, stay calm, and trust your training. Use your breathing techniques and visualization to stay relaxed. Believe in your preparation and follow your game plan.</p>
-                    </div>
-                    <div class="guide-item">
-                        <h3>10. Post-Competition Reflection</h3>
-                        <p>No matter the outcome, every competition is a learning experience. Seek feedback from your coach and teammates, reflect on what went well and what didn’t, and use this to guide your future training.</p>
-                    </div>
+                    </p>
+
+                    <h3 id="competition-day">9. On Competition Day</h3>
+                    <p id="competition-day-text">
+                        <ul>
+                            <li><strong>Arrive Early:</strong> Give yourself plenty of time to check in, warm up, and get mentally prepared.</li>
+                            <li><strong>Stay Calm:</strong> Use your breathing techniques and visualization to stay relaxed.</li>
+                            <li><strong>Trust Your Training:</strong> Believe in your preparation and follow your game plan.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="post-competition">10. Post-Competition Reflection</h3>
+                    <p id="post-competition-text">
+                        No matter the outcome, every competition is a learning experience.
+                        <ul>
+                            <li><strong>Feedback:</strong> Seek feedback from your coach and teammates. Identify areas for improvement.</li>
+                            <li><strong>Celebrate:</strong> Celebrate your efforts and achievements, regardless of the result.</li>
+                            <li><strong>Reflect:</strong> Reflect on what you learned and how you can apply those lessons to future training and competitions.</li>
+                        </ul>
+                    </p>
                 </div>
             </section>
         </div>
     </div>
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="icons8-credit">
-            <a target="_blank" href="https://icons8.com/">Icons by Icons8</a>
-        </div>
-    </footer>
-
-    <script src="/JS/script4.js"></
+    <!--Scripts-->
+    <script src="/JS/script4.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+</html>
