--- a/myfirstcompetition.html
+++ b/myfirstcompetition.html
@@ -43,7 +43,7 @@
 
     <!--BANNER-->
     <div class="banner-area">
-        <img src="path-to-your-image.jpg" alt="BJJ Competition" class="banner-image">
+        <img src="" alt="" class="">
     </div>
     
     <!--CONTENT-->
