--- a/myfirstcompetition.html
+++ b/myfirstcompetition.html
@@ -71,11 +71,11 @@
                     <p id="develop-game-plan-text">
                         A game plan is essential for success. This isn’t just a vague idea but a detailed strategy for every possible scenario.
                         <ul>
-                            <li><strong>Starting Position:</strong> Decide whether you’ll aim for a takedown or pull guard.</li>
-                            <li><strong>Top Positions:</strong> Know your go-to moves for passing guard and maintaining control.</li>
-                            <li><strong>Bottom Positions:</strong> Have specific sweeps and escapes drilled into muscle memory.</li>
-                            <li><strong>Submissions:</strong> Focus on a few high-percentage submissions that you can execute well.</li>
-                            <li><strong>Defense:</strong> Be prepared to defend against common attacks and recover from bad positions.</li>
+                            <li id="starting-position"><strong>Starting Position:</strong> Decide whether you’ll aim for a takedown or pull guard.</li>
+                            <li id="top-positions"><strong>Top Positions:</strong> Know your go-to moves for passing guard and maintaining control.</li>
+                            <li id="bottom-positions"><strong>Bottom Positions:</strong> Have specific sweeps and escapes drilled into muscle memory.</li>
+                            <li id="submissions"><strong>Submissions:</strong> Focus on a few high-percentage submissions that you can execute well.</li>
+                            <li id="defense"><strong>Defense:</strong> Be prepared to defend against common attacks and recover from bad positions.</li>
                         </ul>
                     </p>
 
@@ -83,9 +83,9 @@
                     <p id="train-smart-text">
                         Consistency is key. Regular training sessions will improve your techniques, stamina, and overall fitness.
                         <ul>
-                            <li><strong>Spar with Different Partners:</strong> This will expose you to various styles and body types.</li>
-                            <li><strong>Drill, Drill, Drill:</strong> Repetition builds proficiency. Focus on the techniques in your game plan.</li>
-                            <li><strong>Conditioning:</strong> Incorporate cardio, strength training, and flexibility exercises. Jump rope, running, and bodyweight exercises are excellent choices.</li>
+                            <li id="spar-with-partners"><strong>Spar with Different Partners:</strong> This will expose you to various styles and body types.</li>
+                            <li id="drill-drill-drill"><strong>Drill, Drill, Drill:</strong> Repetition builds proficiency. Focus on the techniques in your game plan.</li>
+                            <li id="conditioning"><strong>Conditioning:</strong> Incorporate cardio, strength training, and flexibility exercises. Jump rope, running, and bodyweight exercises are excellent choices.</li>
                         </ul>
                     </p>
 
@@ -93,9 +93,9 @@
                     <p id="mental-preparation-text">
                         Your mindset is just as important as your physical preparation.
                         <ul>
-                            <li><strong>Relax and Breathe:</strong> Learn to control your breathing. Practice deep diaphragm breathing: inhale through your nose for four seconds, fill your lungs, and exhale through your mouth for eight seconds.</li>
-                            <li><strong>Visualization:</strong> Picture your matches in your mind. See yourself executing your game plan, staying calm, and handling any challenges. Always visualize positive outcomes.</li>
-                            <li><strong>Stay Positive:</strong> Replace negative thoughts with positive affirmations. Believe in your training and your ability to perform well.</li>
+                            <li id="relax-and-breathe"><strong>Relax and Breathe:</strong> Learn to control your breathing. Practice deep diaphragm breathing: inhale through your nose for four seconds, fill your lungs, and exhale through your mouth for eight seconds.</li>
+                            <li id="visualization"><strong>Visualization:</strong> Picture your matches in your mind. See yourself executing your game plan, staying calm, and handling any challenges. Always visualize positive outcomes.</li>
+                            <li id="stay-positive"><strong>Stay Positive:</strong> Replace negative thoughts with positive affirmations. Believe in your training and your ability to perform well.</li>
                         </ul>
                     </p>
 
@@ -103,11 +103,11 @@
                     <p id="understand-rules-text">
                         Familiarize yourself with the tournament’s rules and point system. Know what submissions are allowed at your belt level and how points are awarded:
                         <ul>
-                            <li><strong>Takedown or Throw:</strong> 2 points</li>
-                            <li><strong>Sweep:</strong> 2 points</li>
-                            <li><strong>Knee on Belly:</strong> 2 points</li>
-                            <li><strong>Passing the Guard:</strong> 3 points</li>
-                            <li><strong>Mount Position:</strong> 4 points</li>
+                            <li id="takedown-or-throw"><strong>Takedown or Throw:</strong> 2 points</li>
+                            <li id="sweep"><strong>Sweep:</strong> 2 points</li>
+                            <li id="knee-on-belly"><strong>Knee on Belly:</strong> 2 points</li>
+                            <li id="passing-guard"><strong>Passing the Guard:</strong> 3 points</li>
+                            <li id="mount-position"><strong>Mount Position:</strong> 4 points</li>
                         </ul>
                     </p>
 
@@ -115,10 +115,10 @@
                     <p id="gear-up-text">
                         Ensure you have the correct gear:
                         <ul>
-                            <li><strong>Gi:</strong> Make sure your gi is IBJJF-legal or meets the specific tournament’s requirements. It should be clean and in good condition.</li>
-                            <li><strong>Belt:</strong> Wear a belt that corresponds to your rank.</li>
-                            <li><strong>Mouthguard:</strong> Protect your teeth.</li>
-                            <li><strong>Extras:</strong> Bring a spare gi, water, snacks, and any other personal items you may need.</li>
+                            <li id="gi"><strong>Gi:</strong> Make sure your gi is IBJJF-legal or meets the specific tournament’s requirements. It should be clean and in good condition.</li>
+                            <li id="belt"><strong>Belt:</strong> Wear a belt that corresponds to your rank.</li>
+                            <li id="mouthguard"><strong>Mouthguard:</strong> Protect your teeth.</li>
+                            <li id="extras"><strong>Extras:</strong> Bring a spare gi, water, snacks, and any other personal items you may need.</li>
                         </ul>
                     </p>
 
@@ -126,8 +126,8 @@
                     <p id="warm-up-text">
                         A good warm-up helps calm your mind and prepare your body.
                         <ul>
-                            <li><strong>Routine:</strong> Perform a familiar warm-up routine that you do before training sessions.</li>
-                            <li><strong>Focus:</strong> Concentrate on your movements and breathing, not the upcoming matches.</li>
+                            <li id="routine"><strong>Routine:</strong> Perform a familiar warm-up routine that you do before training sessions.</li>
+                            <li id="focus"><strong>Focus:</strong> Concentrate on your movements and breathing, not the upcoming matches.</li>
                         </ul>
                     </p>
 
@@ -135,37 +135,34 @@
                     <p id="nutrition-hydration-text">
                         Your performance depends on how well you fuel your body.
                         <ul>
-                            <li><strong>Hydrate:</strong> Drink plenty of water leading up to the competition.</li>
-                            <li><strong>Eat Smart:</strong> Consume a balanced diet rich in proteins, carbohydrates, and healthy fats. On the day of the competition, eat light, easily digestible foods.</li>
+                            <li id="hydrate"><strong>Hydrate:</strong> Drink plenty of water leading up to the competition.</li>
+                            <li id="eat-smart"><strong>Eat Smart:</strong> Consume a balanced diet rich in proteins, carbohydrates, and healthy fats. On the day of the competition, eat light, easily digestible foods.</li>
                         </ul>
                     </p>
 
                     <h3 id="competition-day">9. On Competition Day</h3>
                     <p id="competition-day-text">
+                        Arrive early and stay calm on the day of the competition:
                         <ul>
-                            <li><strong>Arrive Early:</strong> Give yourself plenty of time to check in, warm up, and get mentally prepared.</li>
-                            <li><strong>Stay Calm:</strong> Use your breathing techniques and visualization to stay relaxed.</li>
-                            <li><strong>Trust Your Training:</strong> Believe in your preparation and follow your game plan.</li>
+                            <li id="arrival"><strong>Arrival:</strong> Check the schedule and familiarize yourself with the venue.</li>
+                            <li id="warm-up-again"><strong>Warm-Up Again:</strong> Do a light warm-up to get your body ready for competition.</li>
                         </ul>
                     </p>
 
                     <h3 id="post-competition">10. Post-Competition Reflection</h3>
                     <p id="post-competition-text">
-                        No matter the outcome, every competition is a learning experience.
+                        No matter the outcome, every competition is a learning experience:
                         <ul>
-                            <li><strong>Feedback:</strong> Seek feedback from your coach and teammates. Identify areas for improvement.</li>
-                            <li><strong>Celebrate:</strong> Celebrate your efforts and achievements, regardless of the result.</li>
-                            <li><strong>Reflect:</strong> Reflect on what you learned and how you can apply those lessons to future training and competitions.</li>
+                            <li id="review-performance"><strong>Review Performance:</strong> Analyze what went well and what could be improved.</li>
+                            <li id="set-new-goals"><strong>Set New Goals:</strong> Use the experience to set new goals for future competitions.</li>
                         </ul>
                     </p>
                 </div>
             </section>
         </div>
     </div>
-
-    <!--Scripts-->
-    <script src="/JS/script4.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <!--SCRIPT-->
+    <script src="script.js"></script>
 </body>
 </html>
+
