--- a/myfirstcompetition.html
+++ b/myfirstcompetition.html
@@ -162,7 +162,7 @@
         </div>
     </div>
     <!--SCRIPT-->
-    <script src="script.js"></script>
+    <script src="script4.js"></script>
 </body>
 </html>
 
